# kwin-outline

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LIMITATIONS.md  README.md  install.sh
.github/workflows/: build.yml
packaging/: PKGBUILD
src/: CMakeLists.txt  kwinoutline.cpp  kwinoutline.h  kwinoutlinelog.h  kwinoutlinesettings.kcfg  kwinoutlinesettings.kcfgc  kwinwindoweligibility.cpp  kwinwindoweligibility.h  metadata.json  outlinegeometry.cpp  outlinegeometry.h  outlinewindowrenderer.cpp  outlinewindowrenderer.h  windoweligibility.cpp  windoweligibility.h
src/kcm/: CMakeLists.txt  kwinoutline_config.cpp  kwinoutline_config.h  kwinoutline_config.json
